# pixel-sorcery

./: .gitignore  QUANTIZATION_GUIDE.md  README.md  download-images.sh  inference.py  notes.txt  pyproject.toml  quantize_model.py  sync_dgx.sh  train.py
.claude/: settings.local.json
bad/: notes.md
docs/: approach.md  autohdr-hackathon-approach.md  dgx-setup.md  unet-architecture.md
flutter_app/: DEBUGGING_GUIDE.md  DESIGN_GUIDELINES.md  README.md  pubspec.yaml
flutter_app/ios/: Podfile
flutter_app/test/: widget_test.dart
mobile_models/: README.md  nafnet_realestate.onnx
nafnet-realestate/: API.md  BENCHMARK_RESULTS.md  MODEL_CARD.md  README.md  RETRAIN_COLOR_FIDELITY.md  api_server.py  benchmark_sweep_torch.py  convert_to_coreml.py  create_comparisons.py  create_dataset_triptychs.py  download_test_images.py  generate_s3_gallery.py  inference.py  monitor_training.sh  plan-refined.md  push_to_github_and_hf.sh  smoke_test_api.sh
nafnet-realestate/mobile_models/: README.md  convert_on_mac.py
nafnet-realestate/nafnet_realestate_pipeline/: QUICKSTART.sh
pix2pix-train-v1/: benchmark_inference.py  image-to-image.md
pix2pix-train-v1/nafnet_realestate_pipeline/: README.md
scripts/: benchmark_onnx.py  compare_pytorch_onnx.py  export_onnx.py  inference.py  info_onnx.py  quantize_onnx.py  quantize_pytorch.py  test_onnx.py
src/: __init__.py
src/datasets/: __init__.py  paired_dataset.py
src/models/: __init__.py  base.py  discriminator.py  unet.py
src/utils/: viz.py  (+2 more)
synthetic_data/: .gitignore  README.md  re_pairgen.py  requirements.txt  setup_venv.sh
(+50 files in other folders)
